--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lasagna Recipe</title>
 </head>
 <body>
-    
+    <h1>Easy Lasagna</h1>
+    <img src="./Easy Lasagna.webp">
+    <h2>Description</h2>
+    <p>An simple lasagna for you to make!</p>
+    <p>With so few ingredients, you'll be surprised by the taste of this home cooked meal!</p>
+
 </body>
 </html>
