docs: add ingredients and comments to refactor later

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,10 +7,23 @@
 </head>
 <body>
     <h1>Easy Lasagna</h1>
-    <img src="./Easy Lasagna.webp">
+    <img src="./easy-lasagna.webp"> <!-- need to add alt text to image-->
     <h2>Description</h2>
-    <p>An simple lasagna for you to make!</p>
-    <p>With so few ingredients, you'll be surprised by the taste of this home cooked meal!</p>
-
+    <p>An simple lasagna for you to make!</p>  <!--correct grammar mistake-->
+    <p>With so few ingredients, you'll be surprised by the taste of this home cooked meal!</p> <!--add emphasis  -->
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 pound lean ground beef</li>
+        <li>1 (32 ounce) jar spaghetti sauce</li>
+        <li>32 ounces cottage cheese</li>
+        <li>3 cups shredded mozzarella cheese, divided</li>
+        <li>2 eggs</li>
+        <li>1/2 cup grated Parmesan cheese</li>
+        <li>2 teaspoons dried parsley</li>
+        <li>salt to taste</li>
+        <li>ground black pepper to taste</li>
+        <li>9 lasagna noodles</li>
+        <li>1/2 cup water</li>
+    </ul>
 </body>
 </html>
