feat: add french toast recipe with ingredients, steps, linked to index, and relative link to a picture

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Lasagna</a>
+    <a href="recipes/croissant-french-toast-bake.html">Croissant french toast bake</a>
 </body>
 </html>
