--- a/recipes/croissant-french-toast-bake.html
+++ b/recipes/croissant-french-toast-bake.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <h1>Croissant French Toast Bake</h1>
-    <img src="./croissant-french-toast-bake.webp"> <!-- need to add alt text to image-->
+    <img src="./croissant-french-toast-bake.webp" alt="picture of french toast styled croissant"> 
     <h2>Description</h2>
     <p>This croissant French toast bake is perfect for company or a holiday brunch—a grander version of breakfast pudding or baked French toast. </p>
-    <p>Buttery croissants crisp on the top, and make it look as if you spent all day, but it is very easy to put together.</p> <!--add emphasis  -->
+    <p>Buttery croissants crisp on the top, and make it look as if you spent all day, but it is very easy to put together.</p> 
     <h2>Ingredients</h2>
     <ul>
         <li>Cooking spray</li>
