--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <h1>Easy Lasagna</h1>
-    <img src="./easy-lasagna.webp"> <!-- need to add alt text to image-->
+    <img src="./easy-lasagna.webp" alt="picture of lasagna"> 
     <h2>Description</h2>
-    <p>An simple lasagna for you to make!</p>  <!--correct grammar mistake-->
-    <p>With so few ingredients, you'll be surprised by the taste of this home cooked meal!</p> <!--add emphasis  -->
+    <p>A simple lasagna for you to make!</p>  
+    <p>With so few ingredients, you'll be <em>surprised</em> by the taste of this home cooked meal!</p> 
     <h2>Ingredients</h2>
     <ul>
         <li>1 pound lean ground beef</li>
