feat: add apple slices recipe with ingredients, steps, link to index, and relative link to a picture

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Lasagna</a>
     <a href="recipes/croissant-french-toast-bake.html">Croissant french toast bake</a>
+    <a href="recipes/caramel-apple-slices.html">Caramel apple slices</a>
 </body>
 </html>
