--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Easy Lasagna</h1>
-    <img src="./easy-lasagna.webp" alt="picture of lasagna"> 
+    <img src="./../imgs/easy-lasagna.webp" alt="picture of lasagna"> 
     <h2>Description</h2>
     <p>A simple lasagna for you to make!</p>  
     <p>With so few ingredients, you'll be <em>surprised</em> by the taste of this home cooked meal!</p> 
