--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
-    <a href="recipes/croissant-french-toast-bake.html">Croissant french toast bake</a>
-    <a href="recipes/caramel-apple-slices.html">Caramel apple slices</a>
+    <p><a href="recipes/lasagna.html">Lasagna</a></p>
+    <p><a href="recipes/croissant-french-toast-bake.html">Croissant french toast bake</a></p>
+    <p><a href="recipes/caramel-apple-slices.html">Caramel apple slices</a></p>
 </body>
 </html>
